Resolved alignment in the Home button

--- a/src/main/webapp/styles.css
+++ b/src/main/webapp/styles.css
@@ -32,3 +32,12 @@ th
     border-left  : 1px solid #000000;
     border-right : 1px solid #000000;
 }
+
+.fix-button
+{
+    min-width  : 280px !important;
+    max-width  : 280px !important;
+    min-height : 80px !important;
+    max-height : 80px !important;
+    height     : 80px !important;
+}
